# BTP

./: README.md
catkin_ws/src/: pngtopcd.py
catkin_ws/src/BTP/: cnt.py  extract.py  planner.py  pngtopcd.py
catkin_ws/src/BTP/Franka_Emika/franka_discription/: CMakeLists.txt  package.xml
catkin_ws/src/BTP/Franka_Emika/franka_discription/config/: panda_control.yaml  task.yaml
catkin_ws/src/BTP/Franka_Emika/franka_discription/launch/: RL_task.launch  btp.world  btpv2.world  btpv3.world  btpv4.world  btpv5.world  panda_env.launch  simulator.launch  withprobe.world
catkin_ws/src/BTP/Franka_Emika/franka_discription/meshes/collision/: Ultrasonic-Probe.stl
catkin_ws/src/BTP/Franka_Emika/franka_discription/robots/: hand.xacro  panda.gazebo.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro
catkin_ws/src/BTP/rl_training/: CMakeLists.txt  events.out.tfevents.1588391923.yash.23261.0  package.xml
catkin_ws/src/BTP/rl_training/config/: franka_emika_task.yaml
catkin_ws/src/BTP/rl_training/launch/: training.launch
catkin_ws/src/BTP/rl_training/src/: sac_training.py  training_Q_learning.py
catkin_ws/src/BTP/ultrasound_image/: main.py  randomslice.py
data/: topcd.py
src/pose_v2/: events.out.tfevents.1569932046.vidit.v2
src/pose_v2/model/: model_p.py
src/pose_v2/nets/: transform_net.py
src/pose_v2/resources/: default_config.yaml
src/pose_v2/run/: train.py
src/pose_v2/util/: config.py  data.py  dataloader.py  gauss_kernel.py  losses.py  point_cloud.py  quaternion.py  train.py
(+2 files in other folders)
